--- a/TextFieldDelegateTurma351BF/TextFieldDelegateTurma351BF/Base.lproj/Main.storyboard
+++ b/TextFieldDelegateTurma351BF/TextFieldDelegateTurma351BF/Base.lproj/Main.storyboard
@@ -18,7 +18,6 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Desconto" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g2J-A2-KBh">
                                 <rect key="frame" x="160" y="415.66666666666669" width="73.333333333333314" height="21"/>
-                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -50,7 +49,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="changeButton" destination="FSW-Go-qke" id="fb8-0J-G1q"/>
+                        <outlet property="changeButton" destination="FSW-Go-qke" id="vOQ-13-j1M"/>
                         <outlet property="lastNameLabel" destination="Ux9-wZ-PAB" id="9mf-KH-FLg"/>
                         <outlet property="nameLabel" destination="g2J-A2-KBh" id="9bd-Af-IVH"/>
                     </connections>
@@ -63,9 +62,6 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
