--- a/TableViewSimplesTurma351BF/TableViewSimplesTurma351BF/Cells/NameTableViewCell.xib
+++ b/TableViewSimplesTurma351BF/TableViewSimplesTurma351BF/Cells/NameTableViewCell.xib
@@ -9,31 +9,43 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="110" id="KGk-i7-Jjw" customClass="NameTableViewCell" customModule="TableViewSimplesTurma351BF" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="365" height="110"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="87" id="KGk-i7-Jjw" customClass="NameTableViewCell" customModule="TableViewSimplesTurma351BF" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="365" height="85"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="365" height="110"/>
+                <rect key="frame" x="0.0" y="0.0" width="365" height="85"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uKb-7U-VhF">
-                        <rect key="frame" x="20" y="10" width="42" height="90"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uKb-7U-VhF">
+                        <rect key="frame" x="20" y="10" width="45" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="TVx-or-8jt"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LastName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Wh-9h-RkI">
+                        <rect key="frame" x="20" y="41" width="78" height="34"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="uKb-7U-VhF" secondAttribute="bottom" constant="10" id="5ZZ-Ii-XWE"/>
                     <constraint firstItem="uKb-7U-VhF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="ARG-am-YD3"/>
                     <constraint firstItem="uKb-7U-VhF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="CgQ-ja-I0G"/>
+                    <constraint firstItem="2Wh-9h-RkI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Rxf-H3-lQL"/>
+                    <constraint firstItem="2Wh-9h-RkI" firstAttribute="top" secondItem="uKb-7U-VhF" secondAttribute="bottom" constant="10" id="iqF-21-BAo"/>
+                    <constraint firstAttribute="bottom" secondItem="2Wh-9h-RkI" secondAttribute="bottom" constant="10" id="lQ0-Os-Ype"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="lastName" destination="2Wh-9h-RkI" id="ScL-UK-hIE"/>
                 <outlet property="nameLabel" destination="uKb-7U-VhF" id="NEs-dO-fhY"/>
             </connections>
-            <point key="canvasLocation" x="86.25954198473282" y="42.95774647887324"/>
+            <point key="canvasLocation" x="168.70229007633588" y="35.563380281690144"/>
         </tableViewCell>
     </objects>
 </document>
