ajustando projeto com mock e exibindo na viewController

--- a/HistoryTurma351BF/HistoryTurma351BF/History/Base.lproj/Main.storyboard
+++ b/HistoryTurma351BF/HistoryTurma351BF/History/Base.lproj/Main.storyboard
@@ -15,9 +15,24 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="ZgG-YS-62A">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ZgG-YS-62A" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BTr-4l-OWd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ZgG-YS-62A" secondAttribute="bottom" id="f7m-Sn-l7o"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZgG-YS-62A" secondAttribute="trailing" id="ii0-bV-cJ5"/>
+                            <constraint firstItem="ZgG-YS-62A" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="zJA-0N-i8w"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="ZgG-YS-62A" id="7Uu-Su-YRp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
